# NewsAPI

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  relationships.yaml  requirements.txt
docs/testing/: testing_todo.md
models/ner_finetuned/: all_results.json  config.json  eval_results.json  model.safetensors  test_results.json  train_results.json  trainer_state.json  training_config.json
scripts/: __init__.py  bootstrap_schema.py  run_ingest_once.py  train_ner.py
src/: __init__.py
src/app/: __init__.py  config.py  deps.py  main.py  schemas.py
src/app/analytics/: __init__.py  dejavu.py
src/app/ingest/: __init__.py  rss.py
src/app/llm/: __init__.py  patterns.py  relationships.py
src/app/nlp/: __init__.py  ner.py  translate.py
src/app/storage/: __init__.py  crud.py  db.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_dejavu.py  test_nlp.py  test_relationships.py
